--- a/index.html
+++ b/index.html
@@ -100,7 +100,52 @@
         </div>
     </section>
 
-
+<footer class="footer">
+        <div class="fot">
+            <div class="F1">
+                <h5>Eye Care</h5>
+                <div> <a href="./eye_doc1.html">Dr. Amira Mohamed</a></div>
+                <div> <a href="./eye_doc2.html">Dr. Amr Mohamed</a></div>
+                <div><a href="./eye_doc3.html">Dr. Ahmed Yussef</a></div>
+                <div> <a href="./eye_doc4.html">Dr. Omar Tarek</a></div>
+            </div>
+            <div class="F2">
+                <h5>Dental</h5>
+                <div><a href="./den_doc1.html">Dr. Omar Mohamed</a></div>
+                <div> <a href="./den_doc2.html">Dr. Mohamed Amr</a></div>
+                <div><a href="./den_doc3.html">Dr. Abdullah Amr</a></div>
+                <div><a href="./den_doc4.html">Dr. Ahmed Omar</a></div>
+            </div>
+            <div class="F3">
+                <h5>Pediatrics</h5>
+                <div> <a href="./ped_doc1.html">Dr. Khaled Mohamed</a></div>
+                <div><a href="./ped_doc2.html">Dr. Amr Khaled</a></div>
+                <div><a href="./ped_doc3.html">Dr. Emad Mohamed</a></div>
+                <div><a href="./ped_doc4.html">Dr. Magdy Mohamed</a></div>
+            </div>
+            <div class="F4">
+                <h5>Cardiology</h5>
+                <div><a href="./car_doc1.html">Dr. Mustafa Mohamed</a></div>
+                <div><a href="./car_doc2.html">Dr. Abdulla Wael</a></div>
+                <div><a href="./car_doc3.html">Dr. Mohamed Khaled</a></div>
+                <div><a href="./car_doc4.html">Dr. Nour Mohamed</a></div>
+            </div>
+            <div class="F5">
+                <h5>dermatology</h5>
+                <div> <a href="./der_doc1.html">Dr. Adam James</a></div>
+                <div><a href="./der_doc2.html">Dr. Noah Alexander</a></div>
+                <div><a href="./der_doc3.html">Dr. Ethan Michael</a></div>
+                <div><a href="./der_doc4.html">Dr. Liam David</a></div>
+            </div>
+            <div class="F6">
+                <h5>Neurology</h5>
+                <div> <a href="./neu_doc1.html">Dr. William Thomas</a></div>
+                <div> <a href="./neu_doc2.html">Dr. Daniel Joseph</a></div>
+                <div> <a href="./neu_doc3.html">Dr. Henry Lucas</a></div>
+                <div><a href="./neu_doc4.html">Dr. Sophia Grace</a></div>
+            </div>
+        </div>
+    </footer>
 
 
 
@@ -113,5 +158,6 @@
 </script>
 <div class="gcse-search" id="search"></div> -->
 </body>
+
 
 </html>
